<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fenetre_3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.barthste.tp3.Fenetre_3">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/iv_f3_image"
            android:contentDescription="@string/image_desc" />

        <TextView
            android:text="@string/to_fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_f3_name" />

        <TextView
            android:text="@string/to_fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_f3_code" />

        <TextView
            android:text="@string/to_fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_f3_email" />

        <TextView
            android:text="@string/to_fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_f3_is_student" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/enter_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_f3_review" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:id="@+id/et_f3_note"
                android:labelFor="@id/et_f3_note" />

        </LinearLayout>

        <Button
            android:text="@string/back_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_f3_back"
            android:onClick="clickBack" />

    </LinearLayout>

</RelativeLayout>
